--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,22 +13,22 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: Restore@2
+- task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
     projects: '**/*.csproj'
     feedsToUse: 'select'
-- task: Build@2
+- task: DotNetCoreCLI@2
   inputs:
     command: 'build'
     projects: '**/*.csproj'
     arguments: '--configuration $(BuildConfiguration)'
-- task: Test@2
+- task: DotNetCoreCLI@2
   inputs:
     command: 'test'
     projects: '**/*Tests.csproj'
     arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
-- task: Publish@2
+- task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
     publishWebProjects: true
@@ -39,6 +39,7 @@ steps:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+
 - task: PublishCodeCoverageResults@2
   inputs:
     codeCoverageTool: 'Cobertura'
