--- a/ApiDemoUnitTests/ApiDemoUnitTests.csproj
+++ b/ApiDemoUnitTests/ApiDemoUnitTests.csproj
@@ -25,4 +25,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
+  </ItemGroup>
+
 </Project>
